<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Currade</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_courses_page">CoursesPage</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_tasks_page">TasksPage</string>
    <string name="courses">Courses</string>
    <string name="tasks">Tasks</string>
    <string name="taskName">Task Name</string>
    <string name="addCourse">Add Course</string>
    <string name="courseCode">Course Code</string>
    <string name="courseName">Course Name</string>
    <string name="add">Add</string>
    <string name="addTask">Add Task</string>
    <string name="cancel">Cancel</string>
    <string name="curGrade">Current Grade:</string>
    <string name="maxPossibleGrade">Max Possible Grade:</string>
    <string name="minPossibleGrade">Min Possible Grade:</string>
    <string name="dueDate">Due Date</string>
    <string name="weight">Weight</string>
    <string name="remove_task">Remove Task</string>
    <string name="edit_task">Edit Task</string>
    <string name="edit_grade">Edit Grade</string>
    <string name="add_grade">Add Grade</string>
    <string name="grade">Grade:</string>
    <string name="finalString">Final</string>
    <string name="prediction">Prediction</string>
    <string name="clear">Clear</string>
    <string name="done">Done</string>
    <string name="clear_predictions">Clear Predictions</string>
    <string name="export_data">Export Data</string>
    <string name="import_data">Import Data</string>
    <string name="view_monthly">View Monthly Schedule</string>
    <string name="view_weekly">View Weekly Schedule</string>
    <string name="finish_task">Delete Selected</string>

</resources>