<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/addGradeGradeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/grade"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/addGradeGradeBox"
        android:layout_width="85dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:maxLength="6"
        android:inputType="numberDecimal" />

    <RadioGroup
        android:id="@+id/addGradeRadioGroup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/addGradeFinalRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finalString" />

        <RadioButton
            android:id="@+id/addGradePredictRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prediction" />

        <RadioButton
            android:id="@+id/addGradeClearRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear" />
    </RadioGroup>

    <Button
        android:id="@+id/addGradeDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="80dp"
        android:text="@string/done" />

    <Button
        android:id="@+id/addGradeCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="80dp"
        android:text="@string/cancel" />

</RelativeLayout>