<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/courseCodeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="17dp"
        android:text="@string/courseCode"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/cancelAddCourseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/addCourseButton"
        android:layout_alignBottom="@+id/addCourseButton"
        android:layout_alignRight="@+id/courseNameInputText"
        android:text="@string/cancel" />

    <EditText
        android:id="@+id/courseCodeInputText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/courseCodeLabel"
        android:ems="10"
        android:inputType="textCapCharacters" />

    <EditText
        android:id="@+id/courseNameInputText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/CourseNameLabel"
        android:ems="10"
        android:inputType="textCapWords" />

    <TextView
        android:id="@+id/CourseNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/courseCodeInputText"
        android:layout_marginTop="18dp"
        android:text="@string/courseName"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/addCourseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/courseNameInputText"
        android:text="@string/add" />

</RelativeLayout>